--- a/Pset3.qmd
+++ b/Pset3.qmd
@@ -71,13 +71,67 @@ As shown by the two sample proportion test, the p-value is extremely small. Thus
 tab <- table(df_mod$RIAGENDR, df_mod$VIQ220)
 prop.test(tab[,1], rowSums(tab))
 ```
-```{r}
-levels(df_mod$VIQ220)
+
+## Sakila
+a. It appears that all movies are from 2006, which is the earliest release year from this database.
+```{r 2a, echo=TRUE, results='hide'}
+library(DBI)
+sakila <- dbConnect(RSQLite::SQLite(), './sakila_master.db')
+dbGetQuery(sakila,'
+  SELECT film_id, title, release_year
+  FROM film
+  ORDER BY release_year ASC
+')
+```
+b. Here's the R approach, note that the min value is unique.
+```{r 2br}
+film_cat <- dbGetQuery(sakila, 'SELECT * FROM film_category')
+category <-  dbGetQuery(sakila, 'SELECT * FROM category')
+cat_count <- table(film_cat$category_id)
+min_cat <- which.min(cat_count)
+cat(category$name[category$category_id == min_cat], cat_count[min_cat])
+```
+Here's the SQL approach
+```{r 2bsql}
+dbGetQuery(sakila, '
+  SELECT c.name, COUNT(*) AS count
+  FROM film_category AS fc
+  JOIN category AS c
+  ON fc.category_id = c.category_id
+  GROUP BY c.category_id
+  ORDER BY count ASC
+  LIMIT 1
+')
+```
+c. Here's the R approach
+```{r 2cr, warning=FALSE}
+customer <- dbGetQuery(sakila, 'SELECT * FROM customer')
+address <- dbGetQuery(sakila, 'SELECT * FROM address')
+city <- dbGetQuery(sakila, 'SELECT * FROM city')
+country <- dbGetQuery(sakila, 'SELECT * FROM country')
+merged_df <- merge(customer, address, by='address_id')
+merged_df <- merge(merged_df, city, by='city_id')
+merged_df <- merge(merged_df, country, by='country_id')
+res <- table(merged_df$country)
+res[res == 13]
+```
+
+Here's the SQL approach.
+```{r 2csql}
+dbGetQuery(sakila, '
+  SELECT country.country, COUNT(*) AS count
+  FROM customer, address, city, country
+  WHERE customer.address_id = address.address_id AND
+    address.city_id = city.city_id AND
+    city.country_id = country.country_id
+  GROUP BY country.country_id
+  HAVING count = 13
+')
 ```
 
 
 
 
-## Sakila
+
 
 ## US Records
