--- a/Pset3.qmd
+++ b/Pset3.qmd
@@ -73,15 +73,12 @@ prop.test(tab[,1], rowSums(tab))
 ```
 
 ## Sakila
-a. It appears that all movies are from 2006, which is the earliest release year from this database.
-```{r 2a, echo=TRUE, results='hide', warning=FALSE}
+a. It appears that the earliest release year is 2006.
+```{r 2a, echo=TRUE, warning=FALSE}
 library(DBI)
 sakila <- dbConnect(RSQLite::SQLite(), './sakila_master.db')
 dbGetQuery(sakila,'
-  SELECT film_id, title, release_year
-  FROM film
-  ORDER BY release_year ASC
-')
+  SELECT MIN(release_year) FROM film')
 ```
 b. Here's the R approach, note that the min value is unique.
 ```{r 2br}
